syntax = "proto3";
// Some very early experiments about what a delegation request might look like

package cyber_ui.delegation;


message DelegationRequest {
  Requester requester = 1;
  string label = 2;
}


message Requester {
  string id = 1;
}
